--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.6.1",
+    "js-md5": "^0.4.1",
     "loader-utils": "^0.2.14"
   },
   "devDependencies": {
@@ -60,6 +61,7 @@
     "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^4.3.0",
     "istanbul": "^1.0.0-alpha.2",
+    "js-md5": "^0.4.1",
     "jsdom": "^8.3.1",
     "mocha": "^2.4.5",
     "react": "^15.0.1",
@@ -73,6 +75,7 @@
     "test:cover": "babel-node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "build": "rimraf lib && babel src --out-dir lib",
+    "watch": "rimraf lib && babel src --watch --out-dir lib",
     "prepublish": "rimraf lib && babel src --out-dir lib"
   }
 }
